--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -1,6 +1,6 @@
 body {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     background-color: rgb(218, 215, 215);
 }
 
@@ -17,7 +17,6 @@ h2 {
     padding: 1rem;
     margin: 2rem auto;
     background-color: rgba(67, 67, 67, 0.5);
-    border-radius: 10px;
 }
 
 .accordion-container {
